# llm-inference-observability

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
apps/backend/: .env.example  Dockerfile  alembic.ini  config.json  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 638d5d789d48_initial_schema.py  833c2d7748cd_fix_message_ordering_clock_timestamp.py  c4e1f2a3b5d6_add_status_to_messages.py  d7f3e9c1a2b4_add_blocked_count_to_aggregated_metrics.py
apps/backend/app/: main.py
apps/backend/app/api/: chat.py  conversations.py  debug.py  logs.py  meta.py  metrics.py
apps/backend/app/config/: constants.py  settings.py
apps/backend/app/db/: database.py  models.py
apps/backend/app/middleware/: log_sink.py  logging_provider.py  logging_setup.py
apps/backend/app/providers/: anthropic_provider.py  base_provider.py  gemini_provider.py  http_client.py  llama_provider.py  openai_provider.py  provider_factory.py
apps/backend/app/repositories/: conversation_repository.py  (+1 more)
apps/frontend/: Dockerfile  package-lock.json  package.json
apps/frontend/src/: App.tsx
deployments/k8s/: 00-namespace.yaml  01-secrets.template.yaml  02-postgres.yaml  03-redis.yaml  04-kafka.yaml  05-backend.yaml  06-ingestor.yaml  07-frontend.yaml  README.md
tests/: e2e.py  test_cancel.py
workers/ingestor/: Dockerfile  pyproject.toml
workers/ingestor/src/ingestor/: main.py  repository.py
workers/ingestor/src/ingestor/enrichers/: __init__.py  cost_calculator.py  pii_redactor.py  pipeline.py  validator.py
(+26 files in other folders)
