[project]
name = "llm-ingestor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.10.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "llm-shared",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ingestor = "ingestor.main:main"
